    - Quality now automatically inferred from source platform
    - Starter pack type inferred from source platform
  Improvements:
    - Fixed localization keys (removed custom section headers)
    - Fixed panel reset issue when selecting platforms
    - Much simpler GUI with only essential controls
    - Reduced code size by ~200 lines
  GUI Changes:
    - Removed blueprint selector
    - Removed starter pack dropdown
    - Removed quality dropdown
    - Panel no longer resets when changing platform selection
  Technical:
    - Uses source_platform.starter_pack directly for quality inference
    - Removed force_data storage (no more blueprint tracking)
    - Added gui.update_status() for efficient status updates
    - Simplified player_data structure
  Bugfixes (2.0.3.1):
    - Fixed field name inconsistency (needs_blueprint vs needs_copy)
    - Fixed race condition where blueprint application would fail if surface/hub not ready
    - Added periodic retry mechanism (every 60 ticks) for pending platforms
    - Added comprehensive debug logging for blueprint application
    - Added error handling for import_stack() return values
    - Added force validation in periodic check
    - Fixed tile copying: changed always_include_tiles from false to true for contiguous ground

---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025
  Major Changes:
    - Completely redesigned GUI system to use floating screen panel
    - Panel now uses player.gui.screen instead of relative anchoring
    - Automatic visibility control based on controller_type (Remote View detection)
    - Panel appears when entering Remote View, hidden in normal play
    - Manual positioning at x=220, y=100 for optimal placement
  Improvements:
    - Added gui.update_panel_visibility() function
    - Panel visibility updates every 30 ticks (~0.5 seconds)
    - Much more reliable GUI visibility in Remote View
  Technical: